# Insights2profit_casestudy

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: .gitkeep
output/: average_lead.csv  colour_revenue.csv
src/: __init__.py  analysis.py  data_loading.py  database.py  transformations.py  utils.py
